# lexpredict-lexnlp-no-sklearn

./: pyproject.toml  setup.py
lexnlp/extract/common/: dates_classifier_model.py
lexnlp/extract/de/: dates_de_classifier.py
lexnlp/extract/de/tests/: test_dates.py
lexnlp/extract/en/: amounts.py  dates.py
lexnlp/extract/en/tests/: test_dates.py
lexnlp/ml/: README.md
lexnlp/nlp/en/segments/: sections.py  titles.py
lexnlp/utils/: amount_delimiting.py  unpickler.py
