[tool.poetry]
name = "lexnlp"
version = "4.20"
description = "LexNLP without sklearn"
authors = ["Lawd Research"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "*"
cloudpickle = "*"
Cython = "*"
dateparser = "*"
elasticsearch = "*"
gensim = "^4.2.0"
importlib-metadata = "*"
joblib = "*"
lxml = "*"
nltk = "*"
num2words = "*"
pandas = "*"
psutil = "*"
pycountry = "*"
python-dateutil = "*"
regex = "*"
reporters-db = "*"
requests = "*"
scipy = "*"
tqdm = "*"
unidecode = "*"
us = "*"
zahlwort2num = "*"
numpy = "*"

[tool.poetry.group.dev.dependencies]
coverage = "*"
memory-profiler = "*"
nose = "*"
pylint = "*"
pytest = "*"
sphinx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
